contrib/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: akamu
  labels:
    app.kubernetes.io/part-of: akamu
    # Enforce the Kubernetes Restricted pod security standard.
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
