contrib/kubernetes/base/akamu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: akamu
  namespace: akamu
  labels:
    app.kubernetes.io/name: akamu
    app.kubernetes.io/component: server
spec:
  selector:
    app.kubernetes.io/name: akamu
    app.kubernetes.io/component: server
  ports:
    - name: acme
      port: 8080
      targetPort: acme
      protocol: TCP
  type: ClusterIP
